fix: correct next/prev alignment

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -264,6 +264,11 @@ table {
 #navigation {
     margin: 3em 0;
 
+    .nav-links {
+        display: flex;
+        justify-content: space-between;
+    }
+
     .label {
         font-size: 1.25em;
     }
@@ -274,9 +279,6 @@ table {
 
     .next {
         text-align: right;
-    }
-
-    .prev, .next {
-        margin: 3em 0;
+        margin-left: auto;
     }
 }
